# arxiv-mcp

./: .coverage  .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
src/arxiv_mcp/: __init__.py  arxiv_client.py  config.py  exceptions.py  logging_config.py  models.py  server.py  utils.py
tests/: test_arxiv_mcp.py
